deploy/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crypto-digging-frontend
  labels:
    app: crypto-digging
    type: frontend
spec:
  template:
    metadata:
      name: crypto-digging-frontend
      labels:
        app: crypto-digging
        type: frontend
    spec:
      containers:
      - name: crypto-digging-frontend
        image: huuthang2509/crypto-digging-fe:testupdate
        ports:
        - containerPort: 3000
  replicas: 2
  selector:
    matchLabels:
      app: crypto-digging
      type: frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1


---
apiVersion: v1
kind: Service
metadata:
  name:  crypto-digging-fe-svc
spec:
  selector:
    app:  crypto-digging
    type:  frontend
  type: NodePort
  ports: 
    - port: 80
      targetPort: 3000
